outlier removed by tukey method

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score 79.904%\n",
+    "# Score: \n",
     "\n",
     "Huge thank you to [Minsuk Heo](https://github.com/minsuk-heo) ([his work](https://github.com/minsuk-heo/kaggle-titanic/blob/master/titanic-solution.ipynb)) and [Yassine Ghouzam](https://www.kaggle.com/yassineghouzam) ([his work](https://www.kaggle.com/yassineghouzam/titanic-top-4-with-ensemble-modeling))!\n",
     "\n",
@@ -53,12 +53,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/numpy/lib/function_base.py:4116: RuntimeWarning: Invalid value encountered in percentile\n",
+      "  interpolation=interpolation)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# Outlier detection curtesy of Yassine who in turn was motivated by the Tukey method\n",
+    "def detect_outliers(df, n, features):\n",
+    "    \"\"\"\n",
+    "    Takes a dataframe df of features and returns a list of the indices\n",
+    "    corresponding to the observations containing more than n outliers according\n",
+    "    to the Tukey method.\n",
+    "    \"\"\"\n",
+    "    outlier_indices = []\n",
+    "    \n",
+    "    # iterate over features(columns)\n",
+    "    for col in features:\n",
+    "        Q1 = np.percentile(df[col], 25) # 1st quartile (25%)\n",
+    "        Q3 = np.percentile(df[col],75)  # 3rd quartile (75%)\n",
+    "        IQR = Q3 - Q1                   # Interquartile range (IQR)\n",
+    "    \n",
+    "        outlier_step = 1.5 * IQR\n",
+    "        outlier_list_col = df[(df[col] < Q1 - outlier_step) | (df[col] > Q3 + outlier_step )].index\n",
+    "        outlier_indices.extend(outlier_list_col)\n",
+    "        \n",
+    "    # select observations containing more than 2 outliers\n",
+    "    outlier_indices = Counter(outlier_indices)        \n",
+    "    multiple_outliers = list( k for k, v in outlier_indices.items() if v > n )\n",
+    "    \n",
+    "    return multiple_outliers   \n",
+    "\n",
+    "# detect outliers from Age, SibSp , Parch and Fare\n",
+    "outliers_to_drop = detect_outliers(train, 2, [\"Age\",\"SibSp\",\"Parch\",\"Fare\"])\n",
+    "\n",
+    "train = train.drop(outliers_to_drop, axis = 0).reset_index(drop=True)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -69,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -92,9 +131,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -121,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -175,21 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'full' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-eb0d0e2044b1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Create a family size descriptor from SibSp and Parch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfull\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Fsize\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"SibSp\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mfull\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Parch\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# Create new feature of family size\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfull\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Single'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfull\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Fsize'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'full' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create a family size descriptor from SibSp and Parch\n",
     "full[\"Fsize\"] = full[\"SibSp\"] + full[\"Parch\"] + 1\n",
@@ -210,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -229,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -265,6 +291,11 @@
        "      <th>Survived</th>\n",
        "      <th>Ticket</th>\n",
        "      <th>Title</th>\n",
+       "      <th>Fsize</th>\n",
+       "      <th>Single</th>\n",
+       "      <th>SmallF</th>\n",
+       "      <th>MedF</th>\n",
+       "      <th>LargeF</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -282,6 +313,11 @@
        "      <td>0.0</td>\n",
        "      <td>A5</td>\n",
        "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -297,6 +333,11 @@
        "      <td>1.0</td>\n",
        "      <td>PC</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -312,6 +353,11 @@
        "      <td>1.0</td>\n",
        "      <td>STONO2</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -327,6 +373,11 @@
        "      <td>1.0</td>\n",
        "      <td>X</td>\n",
        "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -342,6 +393,11 @@
        "      <td>0.0</td>\n",
        "      <td>X</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,15 +411,15 @@
        "3  35.0     C        S  3.972177      0            4       1  female      1   \n",
        "4  35.0  None        S  2.085672      0            5       3    male      0   \n",
        "\n",
-       "   Survived  Ticket  Title  \n",
-       "0       0.0      A5      0  \n",
-       "1       1.0      PC      1  \n",
-       "2       1.0  STONO2      1  \n",
-       "3       1.0       X      1  \n",
-       "4       0.0       X      0  "
+       "   Survived  Ticket  Title  Fsize  Single  SmallF  MedF  LargeF  \n",
+       "0       0.0      A5      0      2       0       1     0       0  \n",
+       "1       1.0      PC      1      2       0       1     0       0  \n",
+       "2       1.0  STONO2      1      1       1       0     0       0  \n",
+       "3       1.0       X      1      2       0       1     0       0  \n",
+       "4       0.0       X      0      1       1       0     0       0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -411,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -452,35 +508,6 @@
     "train[\"Survived\"] = train[\"Survived\"].astype(int)\n",
     "train_y = train[\"Survived\"]\n",
     "train_x = train.drop(labels=[\"Survived\", \"PassengerId\"], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Age', 'Fare', 'Parch', 'SibSp', 'Title_0', 'Title_1', 'Title_2',\n",
-       "       'Title_3', 'Sex_female', 'Sex_male', 'Pclass_1', 'Pclass_2', 'Pclass_3',\n",
-       "       'T_A', 'T_A4', 'T_A5', 'T_AQ3', 'T_AQ4', 'T_AS', 'T_C', 'T_CA',\n",
-       "       'T_CASOTON', 'T_FC', 'T_FCC', 'T_Fa', 'T_LINE', 'T_LP', 'T_PC', 'T_PP',\n",
-       "       'T_PPP', 'T_SC', 'T_SCA3', 'T_SCA4', 'T_SCAH', 'T_SCOW', 'T_SCPARIS',\n",
-       "       'T_SCParis', 'T_SOC', 'T_SOP', 'T_SOPP', 'T_SOTONO2', 'T_SOTONOQ',\n",
-       "       'T_SP', 'T_STONO', 'T_STONO2', 'T_STONOQ', 'T_SWPP', 'T_WC', 'T_WEP',\n",
-       "       'T_X', 'Em_C', 'Em_Q', 'Em_S', 'Ca_A', 'Ca_B', 'Ca_C', 'Ca_D', 'Ca_E',\n",
-       "       'Ca_F', 'Ca_G', 'Ca_None', 'Ca_T'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_x.columns"
    ]
   },
   {
@@ -494,17 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.77104377  0.82491582  0.84175084]\n",
+      "[ 0.81972789  0.81972789  0.80887372]\n",
       "\n",
       "Average is ...\n",
-      "0.812570145903\n"
+      "0.81610983415\n"
      ]
     }
    ],
@@ -537,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +577,7 @@
        "  tol=0.001, verbose=False))])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
