meshing both yassines and minsuk now

--- a/complete/titanic/submission.ipynb
+++ b/complete/titanic/submission.ipynb
@@ -22,7 +22,12 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set()\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -256,7 +261,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -289,7 +296,6 @@
        "      <th>Sex</th>\n",
        "      <th>SibSp</th>\n",
        "      <th>Survived</th>\n",
-       "      <th>Ticket</th>\n",
        "      <th>Title</th>\n",
        "      <th>Fsize</th>\n",
        "      <th>Single</th>\n",
@@ -311,7 +317,6 @@
        "      <td>male</td>\n",
        "      <td>1</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>A5</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -331,7 +336,6 @@
        "      <td>female</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>PC</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -351,7 +355,6 @@
        "      <td>female</td>\n",
        "      <td>0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>STONO2</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -371,7 +374,6 @@
        "      <td>female</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>X</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
        "      <td>0</td>\n",
@@ -391,7 +393,6 @@
        "      <td>male</td>\n",
        "      <td>0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>X</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -411,12 +412,12 @@
        "3  35.0     C        S  3.972177      0            4       1  female      1   \n",
        "4  35.0  None        S  2.085672      0            5       3    male      0   \n",
        "\n",
-       "   Survived  Ticket  Title  Fsize  Single  SmallF  MedF  LargeF  \n",
-       "0       0.0      A5      0      2       0       1     0       0  \n",
-       "1       1.0      PC      1      2       0       1     0       0  \n",
-       "2       1.0  STONO2      1      1       1       0     0       0  \n",
-       "3       1.0       X      1      2       0       1     0       0  \n",
-       "4       0.0       X      0      1       1       0     0       0  "
+       "   Survived  Title  Fsize  Single  SmallF  MedF  LargeF  \n",
+       "0       0.0      0      2       0       1     0       0  \n",
+       "1       1.0      1      2       0       1     0       0  \n",
+       "2       1.0      1      1       1       0     0       0  \n",
+       "3       1.0      1      2       0       1     0       0  \n",
+       "4       0.0      0      1       1       0     0       0  "
       ]
      },
      "execution_count": 9,
@@ -425,15 +426,16 @@
     }
    ],
    "source": [
-    "## Treat Ticket by extracting the ticket prefix. When there is no prefix it returns X. \n",
-    "def ticket_prefix(x):\n",
-    "    if not x.isdigit() :\n",
-    "        return x.replace(\".\",\"\").replace(\"/\",\"\").strip().split(' ')[0] #Take prefix\n",
-    "    else:\n",
-    "        return \"X\"\n",
+    "# ## Treat Ticket by extracting the ticket prefix. When there is no prefix it returns X. \n",
+    "# def ticket_prefix(x):\n",
+    "#     if not x.isdigit() :\n",
+    "#         return x.replace(\".\",\"\").replace(\"/\",\"\").strip().split(' ')[0] #Take prefix\n",
+    "#     else:\n",
+    "#         return \"X\"\n",
     "\n",
-    "full[\"Ticket\"] = full.Ticket.map(ticket_prefix)\n",
-    "full.head(5)"
+    "# full[\"Ticket\"] = full.Ticket.map(ticket_prefix)\n",
+    "full.drop(labels=[\"Ticket\"], axis=1, inplace=True)\n",
+    "full.head()"
    ]
   },
   {
@@ -446,14 +448,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# convert to indicator values Title and Embarked \n",
     "full = pd.get_dummies(full, columns = [\"Title\", \"Sex\", \"Pclass\"])\n",
-    "full = pd.get_dummies(full, columns = [\"Ticket\"],   prefix=\"T\")\n",
     "full = pd.get_dummies(full, columns = [\"Embarked\"], prefix=\"Em\")\n",
     "full = pd.get_dummies(full, columns = [\"Cabin\"],    prefix=\"Ca\")"
    ]
@@ -507,74 +506,79 @@
    "source": [
     "train[\"Survived\"] = train[\"Survived\"].astype(int)\n",
     "train_y = train[\"Survived\"]\n",
-    "train_x = train.drop(labels=[\"Survived\", \"PassengerId\"], axis=1)"
+    "train_x = train.drop(labels=[\"Survived\", \"PassengerId\"], axis=1)\n",
+    "test_x  = test.drop(\"PassengerId\", axis=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling\n",
-    "\n",
-    "### Cross validation score"
+    "# Modeling"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 0.81972789  0.81972789  0.80887372]\n",
-      "\n",
-      "Average is ...\n",
-      "0.81610983415\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "\n",
-    "from sklearn.svm import SVC\n",
-    "\n",
+    "# Massive amounts of model imports\n",
+    "from sklearn.ensemble import RandomForestClassifier, AdaBoostClassifier, GradientBoostingClassifier, ExtraTreesClassifier, VotingClassifier\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import KFold, cross_val_score, GridSearchCV, StratifiedKFold, learning_curve\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import Imputer\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "k_fold = KFold(shuffle=True, random_state=1)\n",
-    "\n",
-    "pipeline = make_pipeline(Imputer(), SVC())\n",
-    "\n",
-    "scoring = 'accuracy'\n",
-    "score = cross_val_score(pipeline, train_x, train_y, cv=k_fold, n_jobs=1, scoring=scoring)\n",
-    "print(score)\n",
-    "print(\"\\nAverage is ...\")\n",
-    "print(sum(score) / len(score))"
+    "# Cross validate model with Kfold stratified cross val\n",
+    "kfold = StratifiedKFold(n_splits=10)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Fitting"
+    "# META MODELING\n",
+    "\n",
+    "### Adaboost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 112 candidates, totalling 1120 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=4)]: Done 712 tasks      | elapsed:    3.8s\n",
+      "[Parallel(n_jobs=4)]: Done 1120 out of 1120 | elapsed:    6.1s finished\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Pipeline(memory=None,\n",
-       "     steps=[('imputer', Imputer(axis=0, copy=True, missing_values='NaN', strategy='mean', verbose=0)), ('svc', SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
-       "  decision_function_shape='ovr', degree=3, gamma='auto', kernel='rbf',\n",
-       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
-       "  tol=0.001, verbose=False))])"
+       "AdaBoostClassifier(algorithm='SAMME.R',\n",
+       "          base_estimator=DecisionTreeClassifier(class_weight=None, criterion='entropy', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='random'),\n",
+       "          learning_rate=0.1, n_estimators=2, random_state=7)"
       ]
      },
      "execution_count": 14,
@@ -583,32 +587,231 @@
     }
    ],
    "source": [
-    "pipeline = make_pipeline(Imputer(), SVC())\n",
-    "pipeline.fit(train_x, train_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_x = test.drop(\"PassengerId\", axis=1)\n",
-    "prediction = pipeline.predict(test_x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "submission = pd.DataFrame({\n",
-    "        \"PassengerId\": test[\"PassengerId\"],\n",
-    "        \"Survived\": prediction\n",
-    "    })\n",
+    "DTC = DecisionTreeClassifier()\n",
     "\n",
-    "submission.to_csv('/Users/pbezuhov/git/Kaggle/submissions/titanic.csv', index=False)"
+    "adaDTC = AdaBoostClassifier(DTC, random_state=7)\n",
+    "\n",
+    "ada_param_grid = {\"base_estimator__criterion\" : [\"gini\", \"entropy\"],\n",
+    "              \"base_estimator__splitter\" :   [\"best\", \"random\"],\n",
+    "              \"algorithm\" : [\"SAMME\",\"SAMME.R\"],\n",
+    "              \"n_estimators\" :[1,2],\n",
+    "              \"learning_rate\":  [0.0001, 0.001, 0.01, 0.1, 0.2, 0.3,1.5]}\n",
+    "\n",
+    "gsadaDTC = GridSearchCV(adaDTC,param_grid = ada_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "\n",
+    "gsadaDTC.fit(train_x, train_y)\n",
+    "\n",
+    "gsadaDTC.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ExtraTrees "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 54 candidates, totalling 540 fits\n"
+     ]
+    }
+   ],
+   "source": [
+    "ExtC = ExtraTreesClassifier()\n",
+    "\n",
+    "\n",
+    "## Search grid for optimal parameters\n",
+    "ex_param_grid = {\"max_depth\": [None],\n",
+    "              \"max_features\": [1, 3, 10],\n",
+    "              \"min_samples_split\": [2, 3, 10],\n",
+    "              \"min_samples_leaf\": [1, 3, 10],\n",
+    "              \"bootstrap\": [False],\n",
+    "              \"n_estimators\" :[100,300],\n",
+    "              \"criterion\": [\"gini\"]}\n",
+    "\n",
+    "\n",
+    "gsExtC = GridSearchCV(ExtC,param_grid = ex_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "\n",
+    "gsExtC.fit(train_x, train_y)\n",
+    "\n",
+    "ExtC_best = gsExtC.best_estimator_\n",
+    "\n",
+    "# Best score\n",
+    "gsExtC.best_score_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RFC = RandomForestClassifier()\n",
+    "\n",
+    "## Search grid for optimal parameters\n",
+    "rf_param_grid = {\"max_depth\": [None],\n",
+    "              \"max_features\": [1, 3, 10],\n",
+    "              \"min_samples_split\": [2, 3, 10],\n",
+    "              \"min_samples_leaf\": [1, 3, 10],\n",
+    "              \"bootstrap\": [False],\n",
+    "              \"n_estimators\" :[100,300],\n",
+    "              \"criterion\": [\"gini\"]}\n",
+    "\n",
+    "\n",
+    "gsRFC = GridSearchCV(RFC,param_grid = rf_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "\n",
+    "gsRFC.fit(train_x, train_y)\n",
+    "\n",
+    "RFC_best = gsRFC.best_estimator_\n",
+    "\n",
+    "# Best score\n",
+    "gsRFC.best_score_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Gradient Boost Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GBC = GradientBoostingClassifier()\n",
+    "gb_param_grid = {'loss' : [\"deviance\"],\n",
+    "              'n_estimators' : [100,200,300],\n",
+    "              'learning_rate': [0.1, 0.05, 0.01],\n",
+    "              'max_depth': [4, 8],\n",
+    "              'min_samples_leaf': [100,150],\n",
+    "              'max_features': [0.3, 0.1] \n",
+    "              }\n",
+    "\n",
+    "gsGBC = GridSearchCV(GBC,param_grid = gb_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "\n",
+    "gsGBC.fit(train_x, train_y)\n",
+    "\n",
+    "GBC_best = gsGBC.best_estimator_\n",
+    "\n",
+    "# Best score\n",
+    "gsGBC.best_score_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVC Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVMC = SVC(probability=True)\n",
+    "svc_param_grid = {'kernel': ['rbf'], \n",
+    "                  'gamma': [ 0.001, 0.01, 0.1, 1],\n",
+    "                  'C': [1, 10, 50, 100,200,300, 1000]}\n",
+    "\n",
+    "gsSVMC = GridSearchCV(SVMC,param_grid = svc_param_grid, cv=kfold, scoring=\"accuracy\", n_jobs= 4, verbose = 1)\n",
+    "\n",
+    "gsSVMC.fit(train_x, train_y)\n",
+    "\n",
+    "SVMC_best = gsSVMC.best_estimator_\n",
+    "\n",
+    "# Best score\n",
+    "gsSVMC.best_score_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Averaging all the models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_Survived_RFC  = pd.Series(RFC_best.predict( test_x), name=\"RFC\")\n",
+    "test_Survived_ExtC = pd.Series(ExtC_best.predict(test_x), name=\"ExtC\")\n",
+    "test_Survived_SVMC = pd.Series(SVMC_best.predict(test_x), name=\"SVC\")\n",
+    "test_Survived_AdaC = pd.Series(ada_best.predict( test_x), name=\"Ada\")\n",
+    "test_Survived_GBC  = pd.Series(GBC_best.predict( test_x), name=\"GBC\")\n",
+    "\n",
+    "\n",
+    "# Concatenate all classifier results\n",
+    "ensemble_results = pd.concat([\n",
+    "                                test_Survived_RFC,\n",
+    "                                test_Survived_ExtC,\n",
+    "                                test_Survived_AdaC,\n",
+    "                                test_Survived_GBC,\n",
+    "                                test_Survived_SVMC\n",
+    "                             ],axis=1)\n",
+    "\n",
+    "votingC = VotingClassifier(estimators=[('rfc', RFC_best), ('extc', ExtC_best),\n",
+    "('svc', SVMC_best), ('adac',ada_best),('gbc',GBC_best)], voting='soft', n_jobs=4)\n",
+    "\n",
+    "votingC = votingC.fit(train_x, train_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Predicting and saving results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = votingC.predict(test_x)\n",
+    "\n",
+    "predictions = pd.DataFrame({\n",
+    "                            \"PassengerId\": test.PassengerId,\n",
+    "                            \"Survived\": predictions\n",
+    "                            })\n",
+    "\n",
+    "predictions.to_csv(\"../../submissions/titanic.csv\",index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extra\n",
+    "\n",
+    "Taken from Yassine's code.  I think these plots are very interesting\n",
+    "\n",
+    "### Plot learning curves"
    ]
   },
   {
@@ -618,7 +821,43 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def plot_learning_curve(estimator, title, X, y, ylim=None, cv=None,\n",
+    "                        n_jobs=-1, train_sizes=np.linspace(.1, 1.0, 5)):\n",
+    "    \"\"\"Generate a simple plot of the test and training learning curve\"\"\"\n",
+    "    plt.figure()\n",
+    "    plt.title(title)\n",
+    "    if ylim is not None:\n",
+    "        plt.ylim(*ylim)\n",
+    "    plt.xlabel(\"Training examples\")\n",
+    "    plt.ylabel(\"Score\")\n",
+    "    train_sizes, train_scores, test_scores = learning_curve(\n",
+    "        estimator, X, y, cv=cv, n_jobs=n_jobs, train_sizes=train_sizes)\n",
+    "    train_scores_mean = np.mean(train_scores, axis=1)\n",
+    "    train_scores_std = np.std(train_scores, axis=1)\n",
+    "    test_scores_mean = np.mean(test_scores, axis=1)\n",
+    "    test_scores_std = np.std(test_scores, axis=1)\n",
+    "    plt.grid()\n",
+    "\n",
+    "    plt.fill_between(train_sizes, train_scores_mean - train_scores_std,\n",
+    "                     train_scores_mean + train_scores_std, alpha=0.1,\n",
+    "                     color=\"r\")\n",
+    "    plt.fill_between(train_sizes, test_scores_mean - test_scores_std,\n",
+    "                     test_scores_mean + test_scores_std, alpha=0.1, color=\"g\")\n",
+    "    plt.plot(train_sizes, train_scores_mean, 'o-', color=\"r\",\n",
+    "             label=\"Training score\")\n",
+    "    plt.plot(train_sizes, test_scores_mean, 'o-', color=\"g\",\n",
+    "             label=\"Cross-validation score\")\n",
+    "\n",
+    "    plt.legend(loc=\"best\")\n",
+    "    return plt\n",
+    "\n",
+    "g = plot_learning_curve(gsRFC.best_estimator_,\"RF mearning curves\",X_train,Y_train,cv=kfold)\n",
+    "g = plot_learning_curve(gsExtC.best_estimator_,\"ExtraTrees learning curves\",X_train,Y_train,cv=kfold)\n",
+    "g = plot_learning_curve(gsSVMC.best_estimator_,\"SVC learning curves\",X_train,Y_train,cv=kfold)\n",
+    "g = plot_learning_curve(gsadaDTC.best_estimator_,\"AdaBoost learning curves\",X_train,Y_train,cv=kfold)\n",
+    "g = plot_learning_curve(gsGBC.best_estimator_,\"GradientBoosting learning curves\",X_train,Y_train,cv=kfold)"
+   ]
   }
  ],
  "metadata": {
