submission and analysis for house prices look pretty good

--- a/complete/house_prices/submission.ipynb
+++ b/complete/house_prices/submission.ipynb
@@ -4,17 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Score: 0.11558\n",
+    "# Score:\n",
     "\n",
-    "- Most (ALL) of this inspiration comes from Kaggle user Serigine and his excellent tutorial\n",
-    "\n",
-    "Notebook\n",
-    "\n",
-    "https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard\n",
-    "\n",
-    "User page\n",
-    "\n",
-    "https://www.kaggle.com/serigne"
+    "- Most (ALL) of this inspiration comes from Kaggle user [Serigine](https://www.kaggle.com/serigne) and his excellent [tutorial](https://www.kaggle.com/serigne/stacked-regressions-top-4-on-leaderboard)"
    ]
   },
   {
